# biliTicker_gt

./: Cargo.toml  build.rs
.github/workflows/: CI.yml
proto/: captcha.proto
src/: click.rs  lib.rs  main.rs  server.rs  slide.rs
