[package]
name = "bili_ticket_gt"
version = "0.3.2"
edition = "2024"

[[bin]]
name = "captcha-plugin"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = "1.0"
serde_json = "1.0"
image = "0.25"
captcha_breaker = "0.0.0-dev.7"

# gRPC / protobuf
tonic = "0.12"
prost = "0.13"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"

rsa = "0.9"
rand = "0.8.5"
hex = "0.4"
soft-aes = "0.2"
md5 = "0.7"
stdio-override = "0.2.0"

[build-dependencies]
tonic-build = "0.12"

[patch.crates-io]
ort = { git = "https://github.com/biliticket/ort" }
ort-sys = { git = "https://github.com/biliticket/ort" }
